--- a/hub/templates/hub/quizzes.html
+++ b/hub/templates/hub/quizzes.html
@@ -1,18 +1,17 @@
 {% extends "hub/base.html" %}
 {% load staticfiles %}
-{% block pagetitle %}Quiz Results{% endblock %}
+{% block pagetitle %}Quizzes{% endblock %}
 {% block content %}
 
 <div class="dashhead">
   <div class="dashhead-titles">
     <h6 class="dashhead-subtitle">UoP Botswana MoH / TB Training</h6>
-    <h2 class="dashhead-title">Quiz Results</h2>
+    <h2 class="dashhead-title">Quizzes</h2>
   </div>
 
   <div class="btn-toolbar dashhead-toolbar">
-    <div class="btn-toolbar-item input-with-icon">
-      <input type="text" value="14/06/2016" class="form-control" data-provide="datepicker">
-      <span class="icon icon-calendar"></span>
+    <div class="btn-toolbar-item">
+      <a href="{% url 'quiz-edit' 'new' %}"><button type="button" class="btn btn-pill btn-primary">Create new quiz</button></a>
     </div>
   </div>
 </div>
@@ -23,22 +22,19 @@
     <table class="table" data-sort="table">
       <thead>
         <tr>
-          <th>Quiz</th>
-          <th>Completed</th>
-          <th>Start time</th>
-          <th>Complete time</th>
-          <th>Result</th>
+          <th>Description</th>
+          <th>Active</th>
+          <th>Questions</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        {% for result in results.results %}
+        {% for quiz in quizzes.results %}
         <tr>
-          {% url 'quiz-results-detail' result.id as url %}
-          <td>{{ quizzes|get_item:result.quiz }}</td>
-          <td>{{ result.complete|yesno:"Yes,No,Maybe" }}</td>
-          <td>{{ result.started_at|get_date|date:"D d M Y H:i" }}</td>
-          <td>{{ result.completed_at|get_date|date:"D d M Y H:i" }}</td>
-          <td><a href="{{ url }}">view</a></td>
+          <td>{{ quiz.description }}</td>
+          <td>{{ quiz.active|yesno:"Yes,No,Maybe" }}</td>
+          <td>{{ quiz.questions|length }}</td>
+          <td><a href="{% url 'quiz-detail' quiz.id %}">view</a></td>
         </tr>
         {% endfor %}
       </tbody>
@@ -46,7 +42,7 @@
   </div>
 </div>
 
-<div class="text-center">
+<!-- <div class="text-center">
   <ul class="pagination">
     <li>
       <a href="#" aria-label="Previous">
@@ -64,7 +60,7 @@
       </a>
     </li>
   </ul>
-</div>
+</div> -->
 
 
 {% endblock %}
