--- a/hub/templates/hub/users.html
+++ b/hub/templates/hub/users.html
@@ -1,19 +1,12 @@
 {% extends "hub/base.html" %}
 {% load staticfiles %}
-{% block pagetitle %}Quiz Results{% endblock %}
+{% block pagetitle %}Users{% endblock %}
 {% block content %}
 
 <div class="dashhead">
   <div class="dashhead-titles">
     <h6 class="dashhead-subtitle">UoP Botswana MoH / TB Training</h6>
-    <h2 class="dashhead-title">Quiz Results</h2>
-  </div>
-
-  <div class="btn-toolbar dashhead-toolbar">
-    <div class="btn-toolbar-item input-with-icon">
-      <input type="text" value="14/06/2016" class="form-control" data-provide="datepicker">
-      <span class="icon icon-calendar"></span>
-    </div>
+    <h2 class="dashhead-title">Users</h2>
   </div>
 </div>
 
@@ -23,21 +16,17 @@
     <table class="table" data-sort="table">
       <thead>
         <tr>
-          <th>Quiz</th>
-          <th>Completed</th>
-          <th>Start time</th>
-          <th>Complete time</th>
-          <th>Result</th>
+          <th>Identity</th>
+          <th>Created At</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        {% for result in results.results %}
+        {% for identity in identities.results %}
         <tr>
-          {% url 'quiz-results-detail' result.id as url %}
-          <td>{{ quizzes|get_item:result.quiz }}</td>
-          <td>{{ result.complete|yesno:"Yes,No,Maybe" }}</td>
-          <td>{{ result.started_at|get_date|date:"D d M Y H:i" }}</td>
-          <td>{{ result.completed_at|get_date|date:"D d M Y H:i" }}</td>
+          {% url 'user-detail' identity.id as url %}
+          <td>{{ identity.id }}</td>
+          <td>{{ identity.created_at|get_date|date:"D d M Y H:i"  }}</td>
           <td><a href="{{ url }}">view</a></td>
         </tr>
         {% endfor %}
@@ -46,7 +35,7 @@
   </div>
 </div>
 
-<div class="text-center">
+<!-- <div class="text-center">
   <ul class="pagination">
     <li>
       <a href="#" aria-label="Previous">
@@ -64,7 +53,7 @@
       </a>
     </li>
   </ul>
-</div>
+</div> -->
 
 
 {% endblock %}
