--- a/hub/templates/hub/base.html
+++ b/hub/templates/hub/base.html
@@ -17,7 +17,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
 
-      <link href="{% static "hub/css/toolkit-inverse.css" %}" rel="stylesheet">
+      <link href="{% static "hub/css/toolkit-light.css" %}" rel="stylesheet">
 
 
     <link href="{% static "hub/css/application.css" %}" rel="stylesheet">
