--- a/hub/templates/hub/index.html
+++ b/hub/templates/hub/index.html
@@ -9,59 +9,14 @@
   </div>
 
   <div class="btn-toolbar dashhead-toolbar">
-    <div class="btn-toolbar-item input-with-icon">
-      <input type="text" value="01/01/15 - 01/08/15" class="form-control" data-provide="datepicker">
-      <span class="icon icon-calendar"></span>
-    </div>
+    &nbsp;
   </div>
 </div>
 
 <hr class="m-t">
 
-<div class="row text-center m-t-lg">
-  <div class="col-sm-4 m-b-md">
-    <div class="w-lg m-x-auto">
-      <canvas
-      class="ex-graph"
-      width="200" height="200"
-      data-chart="doughnut"
-      data-value="[{ value: 230, color: '#1ca8dd', label: 'Returning' }, { value: 130, color: '#1bc98e', label: 'New' }]"
-      data-segment-stroke-color="#252830">
-      </canvas>
-    </div>
-    <strong class="text-muted">Users</strong>
-    <h3>New vs Returning</h3>
-  </div>
-  <div class="col-sm-4 m-b-md">
-    <div class="w-lg m-x-auto">
-      <canvas
-      class="ex-graph"
-      width="200" height="200"
-      data-chart="doughnut"
-      data-value="[{ value: 330, color: '#1ca8dd', label: 'Recurring' }, { value: 30, color: '#1bc98e', label: 'New' }]"
-      data-segment-stroke-color="#252830">
-      </canvas>
-    </div>
-    <strong class="text-muted">Quiz Results</strong>
-    <h3>Correct vs Incorrect</h3>
-  </div>
-  <div class="col-sm-4 m-b-md">
-    <div class="w-lg m-x-auto">
-      <canvas
-      class="ex-graph"
-      width="200" height="200"
-      data-chart="doughnut"
-      data-value="[{ value: 100, color: '#1ca8dd', label: 'Referrals' }, { value: 260, color: '#1bc98e', label: 'Direct' }]"
-      data-segment-stroke-color="#252830">
-      </canvas>
-    </div>
-    <strong class="text-muted">Source</strong>
-    <h3>USSD vs Facebook</h3>
-  </div>
-</div>
-
 <div class="hr-divider m-t-md m-b">
-  <h3 class="hr-divider-content hr-divider-heading">Quick stats</h3>
+  <h3 class="hr-divider-content hr-divider-heading">Last 30 days stats</h3>
 </div>
 
 <div class="row statcards">
@@ -70,12 +25,10 @@
     <div class="p-a">
     <span class="statcard-desc">Quizzes taken</span>
     <h2 class="statcard-number">
-      238
-      <small class="delta-indicator delta-positive">5%</small>
+      {{ stats.tracker_complete }}
     </h2>
     <hr class="statcard-hr m-b-0">
     </div>
-    <canvas id="sparkline1" width="378" height="94" class="sparkline" data-chart="spark-line" data-value="[{data:[28,68,41,43,96,45,100]}]" data-labels="['a','b','c','d','e','f','g']" style="width: 189px; height: 47px;"></canvas>
     </div>
   </div>
   <div class="col-sm-6 col-lg-3 m-b">
@@ -83,12 +36,10 @@
     <div class="p-a">
     <span class="statcard-desc">Answered</span>
     <h2 class="statcard-number">
-      1,015
-      <small class="delta-indicator delta-negative">6.3%</small>
+      {{ stats.answered }}
     </h2>
     <hr class="statcard-hr m-b-0">
     </div>
-    <canvas id="sparkline1" width="378" height="94" class="sparkline" data-chart="spark-line" data-value="[{data:[4,34,64,27,96,50,80]}]" data-labels="['a', 'b','c','d','e','f','g']" style="width: 189px; height: 47px;"></canvas>
     </div>
   </div>
   <div class="col-sm-6 col-lg-3 m-b">
@@ -96,12 +47,10 @@
     <div class="p-a">
     <span class="statcard-desc">Correct</span>
     <h2 class="statcard-number">
-      814
-      <small class="delta-indicator delta-positive">6.75%</small>
+      {{ stats.answers_correct }}
     </h2>
     <hr class="statcard-hr m-b-0">
     </div>
-    <canvas id="sparkline1" width="378" height="94" class="sparkline" data-chart="spark-line" data-value="[{data:[12,38,32,60,36,54,68]}]" data-labels="['a', 'b','c','d','e','f','g']" style="width: 189px; height: 47px;"></canvas>
     </div>
   </div>
   <div class="col-sm-6 col-lg-3 m-b">
@@ -109,12 +58,10 @@
     <div class="p-a">
     <span class="statcard-desc">Incorrect</span>
     <h2 class="statcard-number">
-      201
-      <small class="delta-indicator delta-negative">1.3%</small>
+      {{ stats.answers_incorrect }}
     </h2>
     <hr class="statcard-hr m-b-0">
     </div>
-    <canvas id="sparkline1" width="378" height="94" class="sparkline" data-chart="spark-line" data-value="[{data:[43,48,52,58,50,95,100]}]" data-labels="['a', 'b','c','d','e','f','g']" style="width: 189px; height: 47px;"></canvas>
     </div>
   </div>
 {% endblock %}
